[workspace]
resolver = "2"
members = ["lib-acme","bin/acme-controller"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
lib-acme = {path = "lib-acme"}
base64 = "0.21.0"
openssl = "0.10.64"
josekit = "0.8.6"
serde_json = "1.0.116"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.8.1"
tracing = "0.1.40"
clap = { version = "4.5.4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.57"
